--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ node_js:
 cache:
   directories:
     - node_modules
+addons:
+  code_climate:
+    repo_token: ee39c24a61294ab3f5963b8a31794cdbb27985798dc45a622a30bb6a2aa592b6
