--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/markogresak/FIXME-js#readme",
   "devDependencies": {
+    "browserify": "^12.0.1",
     "chai": "^3.4.1",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
     "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "uglify-js": "^2.5.0"
   }
 }
