--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 logs
 *.log
 npm-debug.log*
+.idea/
 
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
-node_modules
+node_modules/
 
 # Optional npm cache directory
 .npm
