--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "fixme-js",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "mocha",
     "test:dev": "mocha -R min --watch",
     "test:cov": "istanbul cover _mocha",
-    "prepublish": "mkdir -p dist && browserify index.js | uglifyjs -c -m > dist/fixme.js"
+    "prepublish": "./node_modules/.bin/browserify index.js | uglifyjs -c -m > dist/fixme.js"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,12 @@
   },
   "homepage": "https://github.com/markogresak/FIXME-js#readme",
   "devDependencies": {
-    "browserify": "^12.0.1",
-    "chai": "^3.4.1",
-    "istanbul": "^0.4.0",
-    "mocha": "^2.3.3",
-    "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0",
-    "uglify-js": "^2.5.0"
+    "browserify": ">=12.0.1",
+    "chai": ">=3.4.1",
+    "istanbul": ">=0.4.0",
+    "mocha": ">=2.3.3",
+    "sinon": ">=1.17.2",
+    "sinon-chai": ">=2.8.0",
+    "uglify-js": ">=2.5.0"
   }
 }
