--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,36 @@
 language: node_js
+
+sudo: false
+
+branches:
+  only:
+    - master
+
 node_js:
-  - '4.0'
+  - '7'
+  - '8'
+  - '9'
+  - '10'
+  - '11'
+  - '12'
+  - node
+
+os:
+  - windows
+  - linux
+  - osx
+ 
+env:
+  - NODE_ENV=testing
+
 cache:
   directories:
+    - $HOME/.npm
+    - ~/.npm
+    - ~/.yarn-cache
+    - travis_phantomjs
     - node_modules
+    
 addons:
   code_climate:
     repo_token: ee39c24a61294ab3f5963b8a31794cdbb27985798dc45a622a30bb6a2aa592b6
