--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ sudo: false
 branches:
   only:
     - master
+    - /^greenkeeper-.*$/
 
 node_js:
-  - '7'
   - '8'
   - '9'
   - '10'
@@ -19,7 +19,11 @@ os:
   - windows
   - linux
   - osx
- 
+
+matrix:
+  allow_failures:
+    - os: windows
+    
 env:
   - NODE_ENV=testing
 
